// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Radio matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iPCrfL c-iPCrfL-hIWLRp-color-primary c-iPCrfL-dFDuFW-isDisabled-false c-iPCrfL-hDPvsb-cv decaRadio-input"
      id=":r0:"
      type="radio"
      value=""
    />
    <label
      class="c-hWUVHV c-hWUVHV-ewkobi-size-md c-hWUVHV-hqEieG-isDisabled-false c-hWUVHV-jQVVMl-cv"
      for=":r0:"
    >
      <div
        class="decaRadio-circle"
      />
      Label Text
    </label>
  </div>
</DocumentFragment>
`;

exports[`components/Radio renders all colors 1`] = `
<DocumentFragment>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iPCrfL c-iPCrfL-hIWLRp-color-primary c-iPCrfL-dFDuFW-isDisabled-false c-iPCrfL-hDPvsb-cv decaRadio-input"
      id=":r1:"
      type="radio"
      value=""
    />
    <label
      class="c-hWUVHV c-hWUVHV-ewkobi-size-md c-hWUVHV-hqEieG-isDisabled-false"
      for=":r1:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iPCrfL c-iPCrfL-bEiFsv-color-secondary c-iPCrfL-dFDuFW-isDisabled-false c-iPCrfL-eZtkzt-cv decaRadio-input"
      id=":r2:"
      type="radio"
      value=""
    />
    <label
      class="c-hWUVHV c-hWUVHV-ewkobi-size-md c-hWUVHV-hqEieG-isDisabled-false"
      for=":r2:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iPCrfL c-iPCrfL-jftABy-color-success c-iPCrfL-dFDuFW-isDisabled-false c-iPCrfL-jukiKY-cv decaRadio-input"
      id=":r3:"
      type="radio"
      value=""
    />
    <label
      class="c-hWUVHV c-hWUVHV-ewkobi-size-md c-hWUVHV-hqEieG-isDisabled-false"
      for=":r3:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iPCrfL c-iPCrfL-iPWTSD-color-warning c-iPCrfL-dFDuFW-isDisabled-false c-iPCrfL-hiFhtX-cv decaRadio-input"
      id=":r4:"
      type="radio"
      value=""
    />
    <label
      class="c-hWUVHV c-hWUVHV-ewkobi-size-md c-hWUVHV-hqEieG-isDisabled-false"
      for=":r4:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iPCrfL c-iPCrfL-jbDGbB-color-error c-iPCrfL-dFDuFW-isDisabled-false c-iPCrfL-kaiRoB-cv decaRadio-input"
      id=":r5:"
      type="radio"
      value=""
    />
    <label
      class="c-hWUVHV c-hWUVHV-ewkobi-size-md c-hWUVHV-hqEieG-isDisabled-false"
      for=":r5:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
</DocumentFragment>
`;

exports[`components/Radio renders all sizes 1`] = `
<DocumentFragment>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iPCrfL c-iPCrfL-hIWLRp-color-primary c-iPCrfL-dFDuFW-isDisabled-false c-iPCrfL-hDPvsb-cv decaRadio-input"
      id=":r6:"
      type="radio"
      value=""
    />
    <label
      class="c-hWUVHV c-hWUVHV-eBCXCa-size-sm c-hWUVHV-hqEieG-isDisabled-false"
      for=":r6:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iPCrfL c-iPCrfL-hIWLRp-color-primary c-iPCrfL-dFDuFW-isDisabled-false c-iPCrfL-hDPvsb-cv decaRadio-input"
      id=":r7:"
      type="radio"
      value=""
    />
    <label
      class="c-hWUVHV c-hWUVHV-ewkobi-size-md c-hWUVHV-hqEieG-isDisabled-false"
      for=":r7:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iPCrfL c-iPCrfL-hIWLRp-color-primary c-iPCrfL-dFDuFW-isDisabled-false c-iPCrfL-hDPvsb-cv decaRadio-input"
      id=":r8:"
      type="radio"
      value=""
    />
    <label
      class="c-hWUVHV c-hWUVHV-fSBxfe-size-lg c-hWUVHV-hqEieG-isDisabled-false"
      for=":r8:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
</DocumentFragment>
`;
